View for arrange controller

--- a/ImageTools.csproj
+++ b/ImageTools.csproj
@@ -190,10 +190,10 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Convert\Index.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Arrange\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Views\Arrange\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
