--- a/Web.config
+++ b/Web.config
@@ -12,9 +12,14 @@
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
-    <httpRuntime targetFramework="4.5" />
+    <httpRuntime targetFramework="4.5" maxRequestLength="1048576"/>
   </system.web>
   <system.webServer>
+   <security>
+      <requestFiltering>
+         <requestLimits maxAllowedContentLength="1073741824" />
+      </requestFiltering>
+   </security>
     <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
