--- a/Web.config
+++ b/Web.config
@@ -9,6 +9,8 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="ImageDensityX" value="150"/>
+    <add key="ImageDensityY" value="150"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
